# pata-amiga-api

./: db_seed.sql  pyproject.toml
src/: main.py
src/pata_amiga_api/: app.py  dependencias.py  seguranca.py
src/pata_amiga_api/api/v1/: aluno_controller.py  animal_controller.py  animal_fotos_controller.py  login_controler.py  sugestao_controller.py  usuarioPJ_controller.py  usuario_controller.py
src/pata_amiga_api/database/: banco_dados.py  modelos.py
src/pata_amiga_api/schemas/: aluno_schemas.py  animal_schemas.py  login_schemas.py  sugestao_schemas.py  usuarioPJ_schemas.py  usuario_schemas.py
